2.0.0/installation/ocm-registration.md
---
type: page
title: OCM Registration
listed: true
description: 
index_title: OCM Registration
hidden: true
keywords: 
tags: 
---

## OPSWAT Central Management

[Central Management](https://my.opswat.com/product-management/inventory) allows you to track and manage multiple OPSWAT products from one location. From a centralized console, you can perform global operations such as view managed anti-malware engines, manage virus definition and engine updates, and check licensing status.

To enroll your products, you need to have a **registration code**, which you can find under *Settings* menu.

{% image url="https://uploads.developerhub.io/prod/XX2D/s6w2vpzg4wc6ta71ijbacuoqm3sp9knu5ftu27kfrvp0dp3c7jnf1c9q4v2f6xsr.png" /%}

## OCM Actions

Navigate to *Admin panel \> Settings \> Integrations* tab and select *OCM Integration*. To perform the registration, you will need

### Enroll to OCM

{% callout type="warning" title="Warning" %}
It is possible to enroll to Central Management on **my.opswat.com** or using **My OPSWAT On-premises**. Please note that enrollment to OCM version 7 is not supported!
{% /callout %}

If you visit this page for the first time, you need to enroll to OCM. To do this, click on *Enroll to OCM* button, paste your *Registration code*, and click *Enroll.*

{% image url="https://uploads.developerhub.io/prod/XX2D/qdy1tx8eagfhp1p1o8oavl140cco7rbnoswliyd6lb8l5ivgxyf87ia19h1x7nsk.png" /%}

In case of successful enrollment, you will see the following screen.

{% image url="https://uploads.developerhub.io/prod/XX2D/bshz6oq0gsxnnf2d3932w4v14qogx5uvyd9fesokgjaswyes9m4m3qtpid6mg7za.png" /%}

From here, you can navigate to the [My Products](https://my.opswat.com/product-management/inventory) page, where you can see your **MetaDefender Sandbox** (previously known as OPSWAT Filescan Sandbox) product listed.

{% image url="https://uploads.developerhub.io/prod/XX2D/b7x58i0nqmr1lcwzd3ds53lfj5b2mwvv0uckfarcnhfwpb8tw57a6gf5y5790pas.png" /%}

### Unenroll

To unenroll your product, click on *Unenroll* on the *OCM Inegration* page.

{% image url="https://uploads.developerhub.io/prod/XX2D/n0bhxe387igpjkd7mwc5v8lnb6ujw5jpfrw9p4ttbv0reonrfrdkbobh8zfktquv.png" /%}

If you select *Remove local data*, your local enrollment data will be removed even if the connection to OCM fails.
